ng g @angular/material:material-dashboard --name dashboard

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -26,5 +26,6 @@
       <span>AngularDemo</span>
     </mat-toolbar>
     <!-- Add Content Here -->
+    <app-dashboard></app-dashboard>
   </mat-sidenav-content>
 </mat-sidenav-container>
