--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -8,9 +8,9 @@
     [opened]="!(isHandset$ | async)">
     <mat-toolbar color="primary">Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item [routerLink]="['/']">Dashboard</a>
+      <a mat-list-item [routerLink]="['/courses']">Courses</a>
+      <a mat-list-item [routerLink]="['/students']">Students</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -26,6 +26,6 @@
       <span>AngularDemo</span>
     </mat-toolbar>
     <!-- Add Content Here -->
-    <app-dashboard></app-dashboard>
+    <router-outlet></router-outlet>>
   </mat-sidenav-content>
 </mat-sidenav-container>
